--- a/css/main.css
+++ b/css/main.css
@@ -7,14 +7,16 @@
  font-family: 'Noto Sans KR', sans-serif;
 }
 
-ul, ol, li{list-style: none;}
-a{text-decoration:none;}
-body{background-color: #111; color: white;}
+ul, ol, li{list-style: none;font-family: 'Noto Sans KR', sans-serif;}
+a{text-decoration:none;font-family: 'Noto Sans KR', sans-serif;}
+body{background-color:black; color: white;}
+p, h2, h3, h4, i{font-family: 'Noto Sans KR', sans-serif;}
+
 
 #wrap{width: 100%; height: 5000px;}
 .container{width: 1340px; height: 100%;margin: 0 auto; border: 1px solid white;}
 
-header{width: 100%; height: 80px;position: fixed;opacity: 0.9; background-color: black; }
+header{width: 100%; height: 80px;position: fixed;z-index: 500; opacity: 0.9; background-color: black; }
 header>.container{display: flex; justify-content: flex-start; align-items: center; text-align: center;}
 header>.container a{width: 250px; line-height: 80px; color: white; font-size: 18px;font-family: 'Noto Sans KR', sans-serif;}
 .logo{width: 250px;line-height: 80px;}
@@ -27,27 +29,41 @@ section>.container{position: relative;}
 
 #artwork{width: 100%; height: 620px; margin-top: 150px;}
 #artwork>.container{display: flex; justify-content: space-between;}
-.artwork_more_text{width: 320px; height:620px; padding: 25px; border: 1px solid white;}
+.artwork_more_text{width: 320px; height:620px; padding: 25px;}
 .artwork_more_text h3{margin-top: 180px; font-size: 22px;}
 .artwork_more_text h2{margin-top: 20px; font-size: 29px;}
 .artwork_more_text p{margin-top: 40px; line-height: 30px;}
-.artwork_more_text a{margin-top: 40px; text-align: center; border-radius: 17px; display: block; color: white; width: 150px;line-height: 40px; background-color: #888;}
+.artwork_more_text a{transition: 0.7s; margin-top: 40px; text-align: center; border-radius: 17px; display: block; color: white; width: 150px;line-height: 40px; background-color: #888;}
+.artwork_more_text a:hover{color: black; background-color: white;}
 .artwork_art_img{width: 840px; height: 620px; position: relative;}
 .artwork_art_img img{width: 840px; height: 495px;}
-.art_text{font-size: 15px; line-height: 35px; font-family: 'Noto Sans KR', sans-serif;padding: 30px; width:500px; height: 280px;position: absolute; top: 55%; background-color: #111;}
+.art_text{font-size: 15px; line-height: 35px;padding: 30px; width:500px; height: 280px;position: absolute; top: 55%; background-color:black;}
 .art_text h2{font-size: 23px; margin-bottom: 15px;}
 
-#Berlin{width: 100%; height: 965px;}
+#Berlin{width: 100%; height: 965px; margin-top: 150px; }
 #Berlin>.container{display: flex; justify-content: space-between;}
-.art_box{width:580px; height:965px;border: 1px solid white;}
-.art_box2{width:550px; height:965px ;border: 1px solid white;}
+.art_box{width:580px; height:965px;border: 1px solid white; position: relative;}
+.art_box img{width: 580px; height: 565px;}
+.Berlin_text{ line-height: 35px;padding: 30px; font-size: 15px; width: 500px; height: 280px; border: 1px solid white;background-color: black; position: absolute; top: 45%;}
+.Berlin_text h2{font-size: 23px; margin-bottom: 15px;}
+.art_box2{width:550px; height:965px ; border: 1px solid white; position: relative;}
+.art_box2 img{width: 100%; height: 710px;margin-top: 130px;}
+.Berlin_text_ri{line-height: 35px;padding: 30px; font-size: 15px;width: 500px; height: 280px; border: 1px solid white;background-color: black; position: absolute; top: 71%;}
+.Berlin_text_ri h2{font-size: 23px; margin-bottom: 15px;}
 
-#artwork_bg{width: 100%; height:900px;}
+#artwork_bg{width: 100%;overflow: hidden;  height:900px; margin-top: 150px;}
 #artwork_bg>.container{position: relative;}
-.slide_head_text{width: 100%; height: 150px;border: 1px solid white; position: absolute; top:50px;}
-.artwork_bg_img{width: 100%; height: 460px;border: 1px solid white;}
+.slide_head_text{text-align: right; padding: 30px 40px; width: 100%; line-height: 50px; border: 1px solid white; position: absolute; top:50px;}
+.slide_head_text span{font-size: 22px; display: inline-block; padding-left:20px; font-weight: bold;}
+.slide_head_text span:hover{cursor: pointer;}
+.artwork_slide{padding: 30px 0 0 30px; display: flex; width:180%; height:435px ;background-color: black; border: 1px solid white; position: absolute; top: 37%; left: 10%;}
+.art_slide_box{width: 450px; height: 405px; border: 1px solid white; padding: 0 20px;}
+.slide_img{width: 100%; height: 275px; border: 1px solid white; overflow: hidden;}
+.slide_img img{width: 100%; height: 100%; opacity: 0.6; transition: 0.7s;}
+.slide_img img:hover{transform: scale(1.2); cursor: pointer; opacity: 1;}
 
-.artwork_slide{width:90%; height:500px ;border: 1px solid white; margin:-180px 0px 0px 130px}
+.slide_text{line-height: 28px; font-size: 11px;}
+.slide_text h3{margin-top: 7px;}
 
 #explanation{width: 100%; height:600px;}
 
