--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ header>.container{display: flex; justify-content: flex-start; align-items: cente
 header>.container a{width: 250px; line-height: 80px; color: white; font-size: 18px;font-family: 'Noto Sans KR', sans-serif;}
 .logo{width: 250px;line-height: 80px;}
 
-.bg_img{position: absolute;z-index: -500; top: 0;  width: 100%; height: 969px; background-image: url(/img/main/space.jpg);background-size: 100% auto;opacity: 0.5; background-attachment: fixed; background-size: cover; background-position:center;}
+.bg_img{position: absolute;z-index: -500; top: 0;  width: 100%; height: 969px; background-image: url(../img/main/space.jpg);background-size: 100% auto;opacity: 0.5; background-attachment: fixed; background-size: cover; background-position:center;}
 section{width: 100%; height: 969px;}
 section>.container{position: relative;}
 .main_text{width: 50%; height:220px; border: 1px solid white;position: absolute; top: 50%; left: 50%;}
@@ -61,10 +61,33 @@ section>.container{position: relative;}
 .slide_img{width: 100%; height: 275px; border: 1px solid white; overflow: hidden;}
 .slide_img img{width: 100%; height: 100%; opacity: 0.6; transition: 0.7s;}
 .slide_img img:hover{transform: scale(1.2); cursor: pointer; opacity: 1;}
-
 .slide_text{line-height: 28px; font-size: 11px;}
 .slide_text h3{margin-top: 7px;}
 
-#explanation{width: 100%; height:600px;}
+#explanation{width: 100%; height:600px;margin-top: 150px;}
+#explanation>.container{display: flex; justify-content: space-between;}
+.more_imgbox{width: 370px; height: 600px; }
+.more_imgbox img{width: 100%;}
+.news{width: 870px; height: 600px; }
+.news_head{width: 100%;line-height: 70px; display: flex; justify-content: flex-start; padding-left: 20px;}
+.news_head h3{width: 15%;}
+.news_content{width: 100%; height: 320px;border-top: 2px solid white; padding: 15px; display: flex; justify-content: flex-start;}
+.news_content:hover{text-decoration:underline;cursor: pointer;}
+.news_content img{width: 190px;}
+.news_box{line-height: 30px;padding-left: 35px; font-size: 13px;}
+.news_box p{margin-top: 20px;}
+.news_content_bot{width: 100%; height: 210px;border-top: 1px solid #555; padding: 15px; display: flex; justify-content: flex-start;}
+.news_content{width: 100%; height: 320px;border-top: 2px solid white; padding: 15px; display: flex; justify-content: flex-start;}
+.news_content_bot:hover{text-decoration:underline;cursor: pointer;}
+.news_content_bot img{width: 190px;}
 
 footer{width: 100%; height:765px;}
+footer .container{padding-top: 150px; display: flex; flex-direction: column; justify-content: space-between;}
+.road h2{font-size: 45px; display: inline-block; margin: 20px 0px;}
+.road span{color: #999; font-weight: bold; font-size: 20px;}
+.road h4{line-height: 30px; color: #999; font-weight: 300;}
+.road a{color: white; display: inline-block; width: 185px; padding: 15px;  margin: 80px 30px 0 0px; border-bottom: 1px solid white; }
+.detail{width: 100%; height: 170px; border-top: 1px #555 solid; padding-top: 50px;}
+.detail ul{display: flex; justify-content: flex-start;}
+.detail li{margin-left: 20px; font-size: 11px;}
+
