--- a/css/main.css
+++ b/css/main.css
@@ -14,12 +14,19 @@ p, h2, h3, h4, i{font-family: 'Noto Sans KR', sans-serif;}
 
 
 #wrap{width: 100%; height: 5000px;}
-.container{width: 1340px; height: 100%;margin: 0 auto; border: 1px solid white;}
+.container{width: 1340px; height: 100%;margin: 0 auto;}
 
 header{width: 100%; height: 80px;position: fixed;z-index: 500; opacity: 0.9; background-color: black; }
-header>.container{display: flex; justify-content: flex-start; align-items: center; text-align: center;}
-header>.container a{width: 250px; line-height: 80px; color: white; font-size: 18px;font-family: 'Noto Sans KR', sans-serif;}
-.logo{width: 250px;line-height: 80px;}
+header .container> ul{height: 80px; width: 100%; display: flex; text-align: center;}
+header .container> ul> li{width: 250px; line-height: 80px;}
+header .container ul li a{display: block; color: white; font-size: 18px;font-family: 'Noto Sans KR', sans-serif;}
+header .container ul li:hover{background-color: #222;}
+header .container ul li ul{display: flex; flex-direction: column;}
+header .container ul li ul{display: none;}
+header .container ul li ul li a{line-height: 65px; font-size: 15px;}
+header .container ul li:hover ul{display: block;}
+.logo{width: 250px;line-height: 80px; font-weight: bold; font-size: 22px;}
+.logo:hover{cursor: pointer;}
 
 .bg_img{position: absolute;z-index: -500; top: 0;  width: 100%; height: 969px; background-image: url(../img/main/space.jpg);background-size: 100% auto;opacity: 0.5; background-attachment: fixed; background-size: cover; background-position:center;}
 section{width: 100%; height: 969px;}
@@ -42,21 +49,21 @@ section>.container{position: relative;}
 
 #Berlin{width: 100%; height: 965px; margin-top: 150px; }
 #Berlin>.container{display: flex; justify-content: space-between;}
-.art_box{width:580px; height:965px;border: 1px solid white; position: relative;}
+.art_box{width:580px; height:965px;position: relative;}
 .art_box img{width: 580px; height: 565px;}
-.Berlin_text{ line-height: 35px;padding: 30px; font-size: 15px; width: 500px; height: 280px; border: 1px solid white;background-color: black; position: absolute; top: 45%;}
+.Berlin_text{ line-height: 35px;padding: 30px; font-size: 15px; width: 500px; height: 280px; background-color: black; position: absolute; top: 45%;}
 .Berlin_text h2{font-size: 23px; margin-bottom: 15px;}
-.art_box2{width:550px; height:965px ; border: 1px solid white; position: relative;}
+.art_box2{width:550px; height:965px ; position: relative;}
 .art_box2 img{width: 100%; height: 710px;margin-top: 130px;}
-.Berlin_text_ri{line-height: 35px;padding: 30px; font-size: 15px;width: 500px; height: 280px; border: 1px solid white;background-color: black; position: absolute; top: 71%;}
+.Berlin_text_ri{line-height: 35px;padding: 30px; font-size: 15px;width: 500px; height: 280px; background-color: black; position: absolute; top: 71%;}
 .Berlin_text_ri h2{font-size: 23px; margin-bottom: 15px;}
 
 #artwork_bg{width: 100%;overflow: hidden;  height:900px; margin-top: 150px;}
 #artwork_bg>.container{position: relative;}
-.slide_head_text{text-align: right; padding: 30px 40px; width: 100%; line-height: 50px; border: 1px solid white; position: absolute; top:50px;}
+.slide_head_text{text-align: right; padding: 30px 40px; width: 100%; line-height: 50px;position: absolute; top:50px;}
 .slide_head_text span{font-size: 22px; display: inline-block; padding-left:20px; font-weight: bold;}
 .slide_head_text span:hover{cursor: pointer;}
-.artwork_slide{padding: 30px 0 0 30px; display: flex; width:180%; height:435px ;background-color: black; border: 1px solid white; position: absolute; top: 37%; left: 10%;}
+.artwork_slide{display: flex; padding: 30px 0 0 30px; width:180%; height:435px ;background-color: black; border: 1px solid white; position: absolute; top: 37%; left: 10%;}
 .art_slide_box{width: 450px; height: 405px; border: 1px solid white; padding: 0 20px;}
 .slide_img{width: 100%; height: 275px; border: 1px solid white; overflow: hidden;}
 .slide_img img{width: 100%; height: 100%; opacity: 0.6; transition: 0.7s;}
@@ -81,13 +88,15 @@ section>.container{position: relative;}
 .news_content_bot:hover{text-decoration:underline;cursor: pointer;}
 .news_content_bot img{width: 190px;}
 
-footer{width: 100%; height:765px;}
-footer .container{padding-top: 150px; display: flex; flex-direction: column; justify-content: space-between;}
+footer{width: 100%; height:765px; margin-top: 150px;}
+footer .container{position: relative; padding-top: 150px; display: flex; flex-direction: column; justify-content: space-between;}
 .road h2{font-size: 45px; display: inline-block; margin: 20px 0px;}
 .road span{color: #999; font-weight: bold; font-size: 20px;}
 .road h4{line-height: 30px; color: #999; font-weight: 300;}
 .road a{color: white; display: inline-block; width: 185px; padding: 15px;  margin: 80px 30px 0 0px; border-bottom: 1px solid white; }
+.map{position: absolute; top: 0; right: 0;}
 .detail{width: 100%; height: 170px; border-top: 1px #555 solid; padding-top: 50px;}
 .detail ul{display: flex; justify-content: flex-start;}
 .detail li{margin-left: 20px; font-size: 11px;}
+.detail p{margin-left: 20px; line-height: 30px; font-size: 11px;}
 
