--- a/css/main.css
+++ b/css/main.css
@@ -10,30 +10,36 @@
 ul, ol, li{list-style: none;font-family: 'Noto Sans KR', sans-serif;}
 a{text-decoration:none;font-family: 'Noto Sans KR', sans-serif;}
 body{background-color:black; color: white;}
-p, h2, h3, h4, i{font-family: 'Noto Sans KR', sans-serif;}
+p, h2, h3, h4, i, td{font-family: 'Noto Sans KR', sans-serif;}
 
 
 #wrap{width: 100%; height: 5000px;}
 .container{width: 1340px; height: 100%;margin: 0 auto;}
 
+@media(min-width:600px){
 header{width: 100%; height: 80px;position: fixed;z-index: 500; opacity: 0.9; background-color: black; }
+.logo{width: 250px;line-height: 80px; font-weight: bold; font-size: 22px;}
+.menu{width: 250px;line-height: 80px; font-weight: bold; font-size: 22px; display: none;}
+.logo a{width: 100%; display: block;line-height:80px; color:white;}
+.menu a{width: 100%; display: block;line-height:80px; color:white;}
+header .container{display: flex; justify-content: space-evenly;}
 header .container> ul{height: 80px; width: 100%; display: flex; text-align: center;}
-header .container> ul> li{width: 250px; line-height: 80px;}
+header .container> ul> li{ width: 225px; line-height: 80px;}
 header .container ul li a{display: block; color: white; font-size: 18px;font-family: 'Noto Sans KR', sans-serif;}
 header .container ul li:hover{background-color: #222;}
 header .container ul li ul{display: flex; flex-direction: column;}
 header .container ul li ul{display: none;}
 header .container ul li ul li a{line-height: 65px; font-size: 15px;}
 header .container ul li:hover ul{display: block;}
-.logo{width: 250px;line-height: 80px; font-weight: bold; font-size: 22px;}
 .logo:hover{cursor: pointer;}
 
-.bg_img{position: absolute;z-index: -500; top: 0;  width: 100%; height: 969px; background-image: url(../img/main/space.jpg);background-size: 100% auto;opacity: 0.5; background-attachment: fixed; background-size: cover; background-position:center;}
-section{width: 100%; height: 969px;}
+.bg_img{position: absolute;z-index: -500; top: 0;  width: 100%; height: 960px; background-image: url(../img/main/space.jpg);background-size: 100% auto;opacity: 0.5; background-attachment: fixed; background-size: cover; background-position:center;}
+.overlay{opacity: 0.9; position: absolute; bottom: 0%; width: 100%; height: 0px; border-bottom: 960px solid black; border-left: 2200px solid transparent;}
+section{width: 100%; height: 969px; position: relative;}
 section>.container{position: relative;}
-.main_text{width: 50%; height:220px; border: 1px solid white;position: absolute; top: 50%; left: 50%;}
-.ctrl_wrap{width: 100%; height: 45px; border: 1px solid white; position: absolute; bottom: 10%;}
-
+.main_text{width: 35%; height:295px;position: absolute; top: 65%; left: 63%;}
+.main_text table{font-size: 17px; line-height: 40px; width: 500px;}
+.main_text a{margin-top: 40px; display: block; font-size: 17px; line-height: 37px; width: 130px; color: white;text-align: center; border: 1px solid white;}
 #artwork{width: 100%; height: 620px; margin-top: 150px;}
 #artwork>.container{display: flex; justify-content: space-between;}
 .artwork_more_text{width: 320px; height:620px; padding: 25px;}
@@ -59,25 +65,29 @@ section>.container{position: relative;}
 .Berlin_text_ri h2{font-size: 23px; margin-bottom: 15px;}
 
 #artwork_bg{width: 100%;overflow: hidden;  height:900px; margin-top: 150px;}
-#artwork_bg>.container{position: relative;}
+#artwork_bg>.container{position: relative; }
+.slide_wrap{width: 180%;height: 435px; overflow: hidden; position: absolute; top: 37%; left: 10%;}
+.artwork_slide{display: flex; width:100%; height:100% ;background-color: black;}
+
 .slide_head_text{text-align: right; padding: 30px 40px; width: 100%; line-height: 50px;position: absolute; top:50px;}
 .slide_head_text span{font-size: 22px; display: inline-block; padding-left:20px; font-weight: bold;}
 .slide_head_text span:hover{cursor: pointer;}
-.artwork_slide{display: flex; padding: 30px 0 0 30px; width:180%; height:435px ;background-color: black; border: 1px solid white; position: absolute; top: 37%; left: 10%;}
-.art_slide_box{width: 450px; height: 405px; border: 1px solid white; padding: 0 20px;}
-.slide_img{width: 100%; height: 275px; border: 1px solid white; overflow: hidden;}
+.art_slide_box{width: 450px; height: 405px;padding: 20px 0 20px 20px;}
+.slide_img{width: 100%; height: 275px;overflow: hidden;}
 .slide_img img{width: 100%; height: 100%; opacity: 0.6; transition: 0.7s;}
 .slide_img img:hover{transform: scale(1.2); cursor: pointer; opacity: 1;}
 .slide_text{line-height: 28px; font-size: 11px;}
 .slide_text h3{margin-top: 7px;}
 
-#explanation{width: 100%; height:600px;margin-top: 150px;}
+#explanation{width: 100%; height:700px;margin-top: 100px;}
 #explanation>.container{display: flex; justify-content: space-between;}
 .more_imgbox{width: 370px; height: 600px; }
 .more_imgbox img{width: 100%;}
+#notice_head{color: #777;}
 .news{width: 870px; height: 600px; }
 .news_head{width: 100%;line-height: 70px; display: flex; justify-content: flex-start; padding-left: 20px;}
-.news_head h3{width: 15%;}
+.news_head h3{font-size: 25px; margin-right: 50px;}
+.news_head h3:hover{cursor: pointer;}
 .news_content{width: 100%; height: 320px;border-top: 2px solid white; padding: 15px; display: flex; justify-content: flex-start;}
 .news_content:hover{text-decoration:underline;cursor: pointer;}
 .news_content img{width: 190px;}
@@ -87,16 +97,133 @@ section>.container{position: relative;}
 .news_content{width: 100%; height: 320px;border-top: 2px solid white; padding: 15px; display: flex; justify-content: flex-start;}
 .news_content_bot:hover{text-decoration:underline;cursor: pointer;}
 .news_content_bot img{width: 190px;}
+.news #notice{display: none;}
+#notice .news_content{height: 230px;}
+#notice .news_content_bot{height: 230px;}
 
-footer{width: 100%; height:765px; margin-top: 150px;}
-footer .container{position: relative; padding-top: 150px; display: flex; flex-direction: column; justify-content: space-between;}
+#guide{width: 100%; height: 700px;}
+#guide .container{position: relative; padding-top: 150px; display: flex; justify-content: space-between;}
 .road h2{font-size: 45px; display: inline-block; margin: 20px 0px;}
 .road span{color: #999; font-weight: bold; font-size: 20px;}
 .road h4{line-height: 30px; color: #999; font-weight: 300;}
 .road a{color: white; display: inline-block; width: 185px; padding: 15px;  margin: 80px 30px 0 0px; border-bottom: 1px solid white; }
-.map{position: absolute; top: 0; right: 0;}
+.map iframe{width: 800px; height: 500px;}
+
+footer{width: 100%; height:305px;}
 .detail{width: 100%; height: 170px; border-top: 1px #555 solid; padding-top: 50px;}
 .detail ul{display: flex; justify-content: flex-start;}
-.detail li{margin-left: 20px; font-size: 11px;}
-.detail p{margin-left: 20px; line-height: 30px; font-size: 11px;}
+.detail li{font-size: 11px; margin-right: 20px;}
+.detail p{line-height: 30px; font-size: 11px;}
+}
+
+
+@media(max-width:599px){
+#wrap{width: 100%; height: 5000px;}
+.container{width: 100%; height: 100%;margin: 0 auto;}
+
+header{width: 100%; height: 80px;position: fixed;z-index: 500; opacity: 0.9; background-color: black; }
+.logo{width: 150px;line-height: 80px; font-weight: bold; font-size: 22px;}
+.menu{width: 150px;line-height: 80px; font-weight: bold; font-size: 22px;}
+.close{width: 150px;line-height: 80px; font-weight: bold; font-size: 22px; display: none;}
+.logo a{width: 100%; display: block;line-height:80px; color:white;}
+.menu a{width: 100%; display: block;line-height:80px; color:white;}
+.close a{width: 100%; display: block;line-height:80px; color:white;}
+
+
+
+header .container{display: flex; justify-content: space-between; text-align: center;}
+header .container> ul{height: 100%; width: 100%; display: none; text-align: center;}
+header .container> ul> li{ width: 225px; line-height: 80px;}
+header .container ul li a{display: block; color: white; font-size: 18px;font-family: 'Noto Sans KR', sans-serif;}
+header .container ul li:hover{background-color: #222;}
+header .container ul li ul{display: flex; flex-direction: column;}
+header .container ul li ul{display: none;}
+header .container ul li ul li a{line-height: 65px; font-size: 15px;}
+header .container ul li:hover ul{display: block;}
+.logo:hover{cursor: pointer;}
+
+.bg_img{position: absolute;z-index: -500; top: 0;  width: 100%; height: 940px; background-image: url(../img/main/space.jpg);background-size: 100% auto;opacity: 0.5; background-attachment: fixed; background-size: cover; background-position:center;}
+.overlay{opacity: 0.9; position: absolute; bottom: 0%; width: 100%; height: 0px; border-bottom: 5000px solid black; border-left: 2500px solid transparent;}
+section{width: 100%; height: 940px; position: relative;}
+section>.container{position: relative;}
+.main_text{width: 35%; height:295px;position: absolute; top: 70%; left: 28%;}
+.main_text table{font-size: 16px; line-height: 40px; width: 500px;}
+.main_text a{margin-top: 40px; display: block; font-size: 17px; line-height: 37px; width: 130px; color: white;text-align: center; border: 1px solid white;}
+
+#artwork{width: 100%; height: 1500px;}
+#artwork>.container{display: flex; flex-direction: column; justify-content: space-between;}
+.artwork_more_text{width: 320px; height:620px; padding: 25px;}
+.artwork_more_text h3{margin-top: 180px; font-size: 22px;}
+.artwork_more_text h2{margin-top: 20px; font-size: 29px;}
+.artwork_more_text p{margin-top: 40px; line-height: 30px;}
+.artwork_more_text a{transition: 0.7s; margin-top: 40px; text-align: center; border-radius: 17px; display: block; color: white; width: 150px;line-height: 40px; background-color: #888;}
+.artwork_more_text a:hover{color: black; background-color: white;}
+.artwork_art_img{width: 840px; height: 900px; position: relative;}
+.artwork_art_img img{width: 840px; height: 495px;}
+.art_text{font-size: 15px; line-height: 35px;padding: 30px; width:500px; height: 280px;position: absolute; top: 55%; background-color:black;}
+.art_text h2{font-size: 23px; margin-bottom: 15px;}
+
+#Berlin{width: 100%; height: 1500px; }
+#Berlin>.container{display: flex; flex-direction: column; justify-content: space-between;}
+.art_box{width:580px; height:800px;position: relative;}
+.art_box img{width: 580px; height: 500px;}
+.Berlin_text{ line-height: 35px;padding: 30px; font-size: 15px; width: 500px; height: 280px; background-color: black; position: absolute; top: 60%;}
+.Berlin_text h2{font-size: 23px; margin-bottom: 15px;}
+.art_box2{width:550px; height:800px ; position: relative;}
+.art_box2 img{width: 100%; height: 710px;margin-top: 130px;}
+.Berlin_text_ri{line-height: 35px;padding: 30px; font-size: 15px;width: 500px; height: 280px; background-color: black; position: absolute; top: 81%;}
+.Berlin_text_ri h2{font-size: 23px; margin-bottom: 15px;}
+
+#artwork_bg{width: 100%;overflow: hidden;  height:1000px; margin-top: 300px;}
+#artwork_bg>.container{position: relative; }
+.slide_wrap{width: 180%;height: 435px; overflow: hidden; position: absolute; top: 37%; left: 10%;}
+.artwork_slide{display: flex; width:100%; height:100% ;background-color: black;}
+
+.slide_head_text{text-align: right; padding: 30px 40px; width: 100%; line-height: 50px;position: absolute; top:50px;}
+.slide_head_text span{font-size: 22px; display: inline-block; padding-left:20px; font-weight: bold;}
+.slide_head_text span:hover{cursor: pointer;}
+.art_slide_box{width: 402px; height: 405px;padding: 20px;}
+.slide_img{width: 382px; height: 275px;overflow: hidden;}
+.slide_img img{width: 100%; height: 100%; opacity: 0.6; transition: 0.7s;}
+.slide_img img:hover{transform: scale(1.2); cursor: pointer; opacity: 1;}
+.slide_text{line-height: 28px; font-size: 11px;}
+.slide_text h3{margin-top: 7px;}
+
+#explanation{width: 100%; height:1650px;margin-top: 50px;}
+#explanation>.container{display: flex; flex-direction: column; justify-content: space-between; align-items: center;}
+.more_imgbox{width: 100%; height: 600px; }
+.more_imgbox img{width: 100%;}
+
+#notice_head{color: #777;}
+.news{width: 100%; height: 800px; margin-top: 150px;}
+.news_head{width: 100%;line-height: 70px; display: flex; justify-content: flex-start; padding-left: 20px;}
+.news_head h3{font-size: 20px; margin-right: 50px;}
+.news_head h3:hover{cursor: pointer;}
+.news_content{width: 100%; height: 100%;border-top: 2px solid white; padding: 15px; display: flex; justify-content: flex-start;}
+.news_content:hover{text-decoration:underline;cursor: pointer;}
+.news_content img{width: 190px;}
+.news_box{line-height: 20px;padding-left: 35px; font-size: 10px;}
+.news_box p{margin-top: 20px;}
+.news_content_bot{width: 100%; height: 210px;border-top: 1px solid #555; padding: 15px; display: flex; justify-content: flex-start;}
+.news_content{width: 100%; height: 320px;border-top: 2px solid white; padding: 15px; display: flex; justify-content: flex-start;}
+.news_content_bot:hover{text-decoration:underline;cursor: pointer;}
+.news_content_bot img{width: 190px;}
+.news #notice{display: none;}
+#notice .news_content{height: 230px;}
+#notice .news_content_bot{height: 230px;}
+
+#guide{width: 100%; height: 900px;}
+#guide .container{position: relative;  display: flex; flex-direction: column; justify-content: space-between;}
+.road h2{font-size: 45px; display: inline-block; margin: 20px 0px;}
+.road span{color: #999; font-weight: bold; font-size: 20px;}
+.road h4{line-height: 30px; color: #999; font-weight: 300;}
+.road a{color: white; display: inline-block; width: 185px; padding: 15px;  margin: 80px 30px 0 0px; border-bottom: 1px solid white; }
+.map iframe{width: 100%; height: 350px;}
+
+footer{width: 100%; height:155px; margin-top: 100px;}
+.detail{width: 100%; height: 170px; border-top: 1px #555 solid; padding-top: 50px;}
+.detail ul{display: flex; justify-content: flex-start;}
+.detail li{font-size: 11px; margin-right: 20px;}
+.detail p{line-height: 30px; font-size: 11px;}
+}
 
