--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
-*{margin: 0; padding: 0; box-sizing: border-box;}
-
-
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+*{margin: 0; padding: 0; box-sizing: border-box;}
 
 .notosanskr * { 
  font-family: 'Noto Sans KR', sans-serif;
@@ -13,31 +11,27 @@ body{background-color:black; color: white;}
 p, h2, h3, h4, i, td{font-family: 'Noto Sans KR', sans-serif;}
 
 
-
 @media(max-width:599px){
-#wrap{width: 100%; height: 100%px;overflow: hidden;}
+#wrap{width: 100%; height: 100%;overflow: hidden;}
 .container{width: 100%; height: 100%;}
 
 header{width: 100%; height: 80px;position: fixed;z-index: 500; opacity: 0.9; background-color: black; }
 .logo{width: 120px;line-height: 80px; font-weight: bold; font-size: 17px; text-align: center;}
 .menu{width: 120px;line-height: 80px; font-weight: bold; font-size: 17px;text-align: center;}
-.close{display: none;}
+.menu:hover{cursor: pointer;}
 .logo a{width: 100%; display: block;line-height:80px; color:white;}
-.menu a{width: 100%; display: block;line-height:80px; color:white;}
-.close a{width: 100%; display: block;line-height:80px; color:white;}
 
 header .container{display: flex; justify-content: space-between; flex-wrap: wrap;}
 header .container> ul{height: 400px; width: 100%; display: none;position: absolute; top: 80px; left: 0px;}
-header .container> ul> li{ width: 100%; line-height: 80px; background-color: black; transition: 0.6s;}
+header .container> ul> li{ padding-left: 20px; width: 100%; line-height: 80px; background-color: black; transition: 0.6s;}
 header .container ul li a{display: block; width: 120px; color: white; font-size: 18px;font-family: 'Noto Sans KR', sans-serif;}
-header .container ul li:hover{background-color: #222;}
+header .container ul li:hover{background-color: #222; cursor: pointer;}
 header .container ul li ul{display: flex; flex-direction: column;}
 header .container ul li ul{display: none;}
-header .container ul li ul li a{line-height: 65px; font-size: 15px; padding-left: 40px;}
-header .container ul li ul li:hover{background-color: #555;}
+header .container ul li ul li a{line-height: 65px; font-size: 15px; padding-left: 20px;}
 .logo:hover{cursor: pointer;}
 
-.bg_img{position: absolute;z-index: -500; top: 0;  width: 100%; height:800px; background-image: url(../img/main/space.jpg);background-size: 100% auto;opacity: 0.5; background-attachment: fixed; background-size: cover; background-position:center;}
+.bg_img{position: absolute;z-index: -500; top: 0;  width: 100%; height:800px; background-image: url(../img/main/space.jpg);background-size: 100% auto;opacity: 0.5; background-attachment: fixed; background-size: cover; background-position:center;-o-background-size: cover; -moz-background-size: cover;-webkit-background-size: cover;}
 .overlay{position: absolute; bottom: 0%;right: 0%; width:0%; height: 0px;border-top: 150px solid transparent; border-left: 700px solid transparent; border-bottom: 400px solid black; border-right: 255px solid black;}
 section{width: 100%; height: 850px; position: relative;}
 .main_text{width: 500px; height: 500px;}
@@ -45,8 +39,8 @@ section{width: 100%; height: 850px; position: relative;}
 .main_text a{margin-top: 25px; display: block; font-size: 11px; line-height: 20px; width: 80px; color: white;text-align: center; border: 1px solid white;} */
 
 
-#artwork{width: 100%; height: 1800px;}
-#artwork>.container{display: flex; flex-direction: column; justify-content: space-between; margin-top: -120px;}
+#artwork{width: 100%; height: auto;}
+#artwork .container{display: flex; flex-direction: column; justify-content: space-between; margin-top: -120px;}
 .artwork_more_text{width: 100%; padding: 25px;}
 .artwork_more_text h3{ font-size: 18px;}
 .artwork_more_text h2{margin-top: 25px; font-size: 25px;}
@@ -69,7 +63,7 @@ section{width: 100%; height: 850px; position: relative;}
 .Berlin_text_ri{line-height: 25px;padding: 30px; font-size: 11px;width: 80%; height: 280px; background-color: black; position: absolute; top:75%;}
 .Berlin_text_ri h2{font-size: 18px; margin-bottom: 15px;}
 
-#artwork_bg{width: 100%;overflow: hidden;  height:1000px;}
+#artwork_bg{width: 100%;overflow: hidden;  height:700px;}
 #artwork_bg>.container{position: relative; }
 .slide_wrap{width: 180%;height: 435px; overflow: hidden; position: absolute; top: 37%; left: 10%;}
 .artwork_slide{display: flex; width:100%; height:100% ;background-color: black;}
@@ -97,7 +91,7 @@ section{width: 100%; height: 850px; position: relative;}
 .news_content{width: 100%; height: 100%;border-top: 2px solid white; padding: 15px; display: flex; justify-content: flex-start;}
 .news_content:hover{text-decoration:underline;cursor: pointer;}
 .news_content img{width: 190px;}
-.news_box{line-height: 20px;padding-left: 35px; font-size: 10px; overflow:scroll;}
+.news_box{line-height: 20px;padding-left: 35px; font-size: 10px; overflow:auto;}
 .news_box p{margin-top: 20px;}
 .news_content_bot{width: 100%; height: 210px;border-top: 1px solid #555; padding: 15px; display: flex; justify-content: flex-start;}
 .news_content{width: 100%; height: 320px;border-top: 2px solid white; padding: 15px; display: flex; justify-content: flex-start;}
@@ -114,8 +108,8 @@ section{width: 100%; height: 850px; position: relative;}
 .road span{color: #999; font-weight: bold; font-size: 20px;}
 .road h4{line-height: 30px; color: #999; font-weight: 300;}
 .road a{color: white; display: inline-block; width: 185px; padding: 15px;  margin: 80px 30px 0 0px; border-bottom: 1px solid white; }
-.map{width: 100%; height: auto;}
-.map iframe{width: 100%; height: auto; padding: 25px;}
+.map{width: 100%; height: 450px;}
+.map iframe{width: 100%; height: 100%; padding: 25px;}
 
 footer{width: 100%; height:185px; margin-top: 30px; padding:  0px 25px;}
 .detail{width: 100%; height: 170px; border-top: 1px #555 solid; padding-top: 50px;}
@@ -131,10 +125,9 @@ footer{width: 100%; height:185px; margin-top: 30px; padding:  0px 25px;}
 header{width: 100%; height: 80px;position: fixed;z-index: 500; opacity: 0.9; background-color: black; }
 .logo{width: 120px;line-height: 80px; font-weight: bold; font-size: 17px; text-align: center;}
 .menu{width: 120px;line-height: 80px; font-weight: bold; font-size: 17px;text-align: center;}
-.close{display: none;}
+.menu:hover{cursor: pointer;}
 .logo a{width: 100%; display: block;line-height:80px; color:white;}
-.menu a{width: 100%; display: block;line-height:80px; color:white;}
-.close a{width: 100%; display: block;line-height:80px; color:white;}
+
 
 header .container{display: flex; justify-content: space-between; flex-wrap: wrap;}
 header .container> ul{height: 400px; width: 100%; display: none;position: absolute; top: 80px; left: 0px;}
@@ -146,25 +139,6 @@ header .container> ul> li> ul{display: none;}
 header .container ul li ul li a{line-height: 65px; font-size: 15px;padding-left: 20px;}
 
 .logo:hover{cursor: pointer;}
-
-/* 
-header{width: 100%; height: 80px;position: fixed;z-index: 500; opacity: 0.9; background-color: black;}
-.logo{width: 250px;line-height: 80px; font-weight: bold; font-size: 22px;}
-.menu{width: 250px;line-height: 80px; font-weight: bold; font-size: 22px; display: none;}
-.close{width: 150px;line-height: 80px; font-weight: bold; font-size: 22px; display: none;}
-.logo a{width: 100%; display: block;line-height:80px; color:white;}
-.menu a{width: 100%; display: block;line-height:80px; color:white;}
-
-header .container{display: flex; justify-content: space-evenly;}
-header .container> ul{height: 80px; width: 100%; display: flex; text-align: center;}
-header .container> ul> li{ width: 225px; line-height: 80px;}
-header .container ul li a{display: block; color: white; font-size: 18px;font-family: 'Noto Sans KR', sans-serif;}
-header .container ul li:hover{background-color: #222;}
-header .container ul li ul{display: flex; flex-direction: column;}
-header .container ul li ul{display: none;}
-header .container ul li ul li a{line-height: 65px; font-size: 15px;}
-header .container ul li:hover ul{display: block;}
-.logo:hover{cursor: pointer;} */
 
 .bg_img{position: absolute;z-index: -500; top: 0;  width: 100%; height: 960px; background-image: url(../img/main/space.jpg);background-size: 100% auto;opacity: 0.5; background-attachment: fixed; background-size: cover; background-position:center;}
 .overlay{position: absolute; bottom: 0%;right: 0%; width:0px; height: 0px; border-top: 150px solid transparent; border-left: 1040px solid transparent; border-bottom: 450px solid black; border-right: 400px solid black;}
@@ -198,11 +172,6 @@ section{width: 100%; height: 969px; position: relative;}
 .Berlin_text_ri{line-height: 35px;padding: 30px; font-size: 15px;width: 85%; height: auto; background-color: black; position: absolute;top: 70%;}
 .Berlin_text_ri h2{font-size: 23px; margin-bottom: 15px;}
 
-/* #artwork_bg{width: 100%;overflow: hidden;  height:auto; margin: 150px 0px 300px 0px;}
-#artwork_bg .container{position: relative; }
-.slide_wrap{width: 150%;height: auto; overflow: hidden; position: absolute; top: 40%;}
-.artwork_slide{display: flex; width:100%; height:auto;background-color: black;} */
-
 #artwork_bg{width: 100%;overflow: hidden;  height:1000px;}
 #artwork_bg>.container{position: relative; }
 .slide_wrap{width: 180%;height: 435px; overflow: hidden; position: absolute; top: 37%; left: 10%;}
@@ -218,18 +187,9 @@ section{width: 100%; height: 969px; position: relative;}
 .slide_text{line-height: 28px; font-size: 11px;}
 .slide_text h3{margin-top: 7px;}
 
-/* .slide_head_text{text-align: right; padding: 30px 40px; width: 100%; line-height: 50px;position: absolute; top:-5%;}
-.slide_head_text span{font-size: 22px; display: inline-block; padding-left:20px; font-weight: bold;}
-.slide_head_text span:hover{cursor: pointer;}
-.art_slide_box{width: 450px; height: 405px;padding: 20px 0 20px 20px;}
-.slide_img{width: 100%; height: 35%;overflow: hidden;}
-.slide_img img{width: 100%; height: auto; opacity: 0.6; transition: 0.7s;}
-.slide_img img:hover{transform: scale(1.2); cursor: pointer; opacity: 1;}
-.slide_text{line-height: 28px; font-size: 11px;}
-.slide_text h3{margin-top: 7px;} */
 
-#explanation{width: 100%; height:1300px;}
-#explanation .container{display: flex; flex-direction: column; justify-content: space-between;}
+#explanation{width: 100%; height:500px;}
+#explanation .container{display: flex; justify-content: space-between;}
 .more_imgbox{width: 50%; height: auto; }
 .more_imgbox img{width: 80%;height: auto;}
 #notice_head{color: #777;}
@@ -240,7 +200,7 @@ section{width: 100%; height: 969px; position: relative;}
 .news_content{width: 100%; height: 320px;border-top: 2px solid white; padding: 15px; display: flex; justify-content: flex-start;}
 .news_content:hover{text-decoration:underline;cursor: pointer;}
 .news_content img{width: 190px;}
-.news_box{line-height: 30px;padding-left: 35px; font-size: 13px;}
+.news_box{line-height: 30px;padding-left: 35px; font-size: 13px;overflow:auto;}
 .news_box p{margin-top: 20px;}
 .news_content_bot{width: 100%; height: 210px;border-top: 1px solid #555; padding: 15px; display: flex; justify-content: flex-start;}
 .news_content{width: 100%; height: 320px;border-top: 2px solid white; padding: 15px; display: flex; justify-content: flex-start;}
@@ -250,31 +210,30 @@ section{width: 100%; height: 969px; position: relative;}
 #notice .news_content{height: 230px;}
 #notice .news_content_bot{height: 230px;}
 
-#guide{width: 100%; height: 1100px; padding: 20px;}
+#guide{width: 100%; height: 950px; padding: 20px;}
 #guide .container{position: relative; padding-top: 150px; display: flex;flex-direction: column; justify-content: space-between;}
 .road h2{font-size: 45px; display: inline-block; margin: 20px 0px;}
 .road span{color: #999; font-weight: bold; font-size: 20px;}
 .road h4{line-height: 30px; color: #999; font-weight: 300;}
 .road a{color: white; display: inline-block; width: 185px; padding: 15px;  margin: 80px 30px 0 0px; border-bottom: 1px solid white; }
-.map iframe{width: 100%; height: 500px;}
+.map iframe{width: 100%; height: 400px;}
 
 footer{width: 100%; height:135px;}
 .detail{width: 100%; height: 170px; border-top: 1px #555 solid; padding-top: 50px;}
 .detail ul{display: flex; justify-content: flex-start;}
 .detail li{font-size: 11px; margin-right: 20px;}
 .detail p{line-height: 30px; font-size: 11px;}
-
-
 }
+
+
 @media(min-width:1340px){
 #wrap{width: 100%; height: 100%; overflow: hidden;}
 .container{width: 1340px; height: 100%;margin: 0 auto; }
 header{width: 100%; height: 80px;position: fixed;z-index: 500; opacity: 0.9; background-color: black;}
 .logo{width: 250px;line-height: 80px; font-weight: bold; font-size: 22px;}
 .menu{width: 250px;line-height: 80px; font-weight: bold; font-size: 22px; display: none;}
-.close{width: 150px;line-height: 80px; font-weight: bold; font-size: 22px; display: none;}
+.menu:hover{cursor: pointer;}
 .logo a{width: 100%; display: block;line-height:80px; color:white;}
-.menu a{width: 100%; display: block;line-height:80px; color:white;}
 
 header .container{display: flex; justify-content: space-evenly;}
 header .container> ul{height: 80px; width: 100%; display: flex; text-align: center;}
