--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ td {
         z-index: -500;
         top: 0;
         width: 100%;
-        height: 800px;
+        height: 100vh;
         opacity: 0.5;
         background-image: url(../img/main/space.jpg);
         background-attachment: fixed;
@@ -223,6 +223,7 @@ td {
         flex-direction: column;
         justify-content: space-between;
         margin-top: -120px;
+        background-color: black;
     }
 
     .artwork_more_text {
@@ -608,8 +609,8 @@ td {
 
     .map iframe {
         width: 100%;
-        height: 100%;
-        padding: 25px;
+        height: auto;
+        padding-top: 50px;
     }
 
     footer {
