--- a/css/sub.css
+++ b/css/sub.css
@@ -207,7 +207,7 @@ td {
     }
     
     .left_contents h2{
-        margin: 17px 0px;
+        margin: 17px 2.5%;
         font-size: 18px;
     }
     
@@ -283,6 +283,7 @@ td {
         width: 100%;
         height: 84px;
         margin: 10px 0 40px 0px;
+        padding: 0 2.5%;
     
     }
     
@@ -736,7 +737,7 @@ td {
     }
     
     .left_contents h2{
-        margin: 77px 0px 27px 0px;
+        margin: 77px 3% 27px;
     }
     
     .art_box img{
@@ -811,6 +812,7 @@ td {
         width: 100%;
         height: 84px;
         margin: 10px 0 40px 0px;
+        padding: 0 3%;
     
     }
     
